# cinders

./: LICENSE  LICENSE_MANIFESTO  MANIFESTO.md  NOTICE.md  README.md  dev.yulian.Cinders.json  dev.yulian.CindersDevel.json  meson.build
.github/workflows/: CI.yml  flatpak-repo.yml
LICENSES/: MIT-Forge-Sparks.txt
build-aux/flatpak-repo/: README.md  build-repo.sh
data/: dev.yulian.Cinders.desktop.in.in  dev.yulian.Cinders.gschema.xml  dev.yulian.Cinders.metainfo.xml.in.in  dev.yulian.Cinders.service.in  meson.build
docs/: atproto-oauth-client-metadata.json  atproto-oauth.md  oauth-redirect-plan.md
po/: POTFILES  pt.po
src/: application.js  atprotoOAuth.js  dev.yulian.Cinders  main.js  meson.build  oauth.js  statusIndicator.js  util.js  window.blp  window.js
src/forges/: forge.js  forgejo.js  gitea.js  github.js  gitlab.js  index.js  tangled.js
src/model/: account.js  accountsManager.js  notification.js  notificationsList.js  repositoryFilter.js
src/widgets/: accountDialog.blp  accountDialog.js  accountsDialog.js  notificationRow.blp  notificationRow.js  preferences.js
